@@ -1,3 +1,8 @@
+2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* networkconfig-mpc8313erdb.h, networkconfig.h: Rename STACK_CHECKER_ON
+	to more appropriate CONFIGURE_STACK_CHECKER_ENABLED.
+
 2008-08-21	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* networkconfig-mpc8313erdb.h: New file.
